--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --header-height: 3.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,4 +19,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.page-with-header {
+  min-height: calc(100vh - var(--header-height));
+}
+
+.header {
+  min-height: var(--header-height);
 }
